Completed stretch goal #1 for search bar. Created new search form component, tested to make sure that it is capable of searching for a github user by username. Code displays user data as expected.

--- a/react-github-user-card/src/App.css
+++ b/react-github-user-card/src/App.css
@@ -1,3 +1,11 @@
 .App {
   text-align: center;
 }
+
+.search-btn {
+  width: auto;
+  margin: 10px;
+  color: white;
+  background-color: green;
+  border-radius: 4px;
+}
